Print where the shortcode is placed even if echo are used Fix hour-list of day view z-index
git-svn-id: http://plugins.svn.wordpress.org/cleanbook/trunk@1016836 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,6 @@
 #cb-displaymessage{
 	display:none;
 }
+#calendar #cal-day-panel-hour{
+	z-index: 1;
+}
